Bug 369038 - Cannot delete custom online quotes service
Summary: Cannot delete custom online quotes service
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-19 08:47 UTC by Mattia
Modified: 2018-03-28 07:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mattia 2016-09-19 08:47:17 UTC
After creating a new custom online quotes service I cannot delete it, the "Delete" button always stays grey.
Comment 1 wojnilowicz 2017-06-20 19:25:56 UTC
Git commit 0a97b8bf7e18a37b3dd225329101119af56f1e4c by Łukasz Wojniłowicz.
Committed on 20/06/2017 at 19:21.
Pushed by wojnilowicz into branch 'master'.

Allow deleting Online Quote Sources
FIXED-IN:5.0

Differential Revision: https://phabricator.kde.org/D6195

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>

M  +2    -0    kmymoney/converter/webpricequote.cpp
M  +42   -3    kmymoney/dialogs/settings/ksettingsonlinequotes.cpp
M  +1    -0    kmymoney/dialogs/settings/ksettingsonlinequotes.h

https://commits.kde.org/kmymoney/0a97b8bf7e18a37b3dd225329101119af56f1e4c