Allow deleting Online Quote Sources

BUG:369038
FIXED-IN:5.0

Differential Revision: https://phabricator.kde.org/D6195

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>